tests/corpus/negative/N14-membership/source.py
def contains(values, target):
    if target in values:
        return True
    return False
